objects/AcctSeedERP__Manufacturing_Inventory_Movement__c.object
<CustomObject>
    <fields>
        <fullName>AcctSeedERP__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Manufacturing Inventory Movements</relationshipLabel>
        <relationshipName>Manufacturing_Inventory_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Manufacturing Inventory Movements (GL Account Variable 2)</relationshipLabel>
        <relationshipName>Manufacturing_Inventory_Movements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Manufacturing Inventory Movements (GL Account Variable 3)</relationshipLabel>
        <relationshipName>Manufacturing_Inventory_Movements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Inventory_Balance__c</fullName>
        <label>Inventory Quantity Available</label>
        <referenceTo>AcctSeedERP__Inventory_Balance__c</referenceTo>
        <relationshipLabel>Manufacturing Inventory Movements</relationshipLabel>
        <relationshipName>Manufacturing_Inventory_Movements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Ledger__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Manufacturing Inventory Movements</relationshipLabel>
        <relationshipName>Manufacturing_Inventory_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Location__c</fullName>
        <formula>AcctSeedERP__Inventory_Balance__r.AcctSeedERP__Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Material__c</fullName>
        <label>Material</label>
        <referenceTo>AcctSeedERP__Material__c</referenceTo>
        <relationshipLabel>Manufacturing Inventory Movements</relationshipLabel>
        <relationshipName>Manufacturing_Inventory_Movements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Movement_Date__c</fullName>
        <label>Movement Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__ProductId__c</fullName>
        <formula>AcctSeedERP__Inventory_Balance__r.AcctSeedERP__Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Product__c</fullName>
        <formula>AcctSeedERP__Inventory_Balance__r.AcctSeedERP__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Project_Task__c</fullName>
        <formula>AcctSeedERP__Material__r.AcctSeedERP__Project_Task__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Project__c</fullName>
        <formula>AcctSeedERP__Material__r.AcctSeedERP__Project__r.Name</formula>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Serial_Number__c</fullName>
        <externalId>true</externalId>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Status__c</fullName>
        <label>Posting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <default>true</default>
                    <label>Approved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Warehouse__c</fullName>
        <formula>AcctSeedERP__Inventory_Balance__r.AcctSeedERP__Warehouse__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warehouse</label>
        <type>Text</type>
    </fields>
    <label>Manufacturing Inventory Movement</label>
    <nameField>
        <displayFormat>MIM-{00000}</displayFormat>
        <label>Manufacturing Inventory Movement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manufacturing Inventory Movements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AcctSeedERP__Quantity_Is_Positive</fullName>
        <active>true</active>
        <description>quantity must be greater than or equal to zero</description>
        <errorConditionFormula>AcctSeedERP__Quantity__c &lt; 0</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Quantity__c</errorDisplayField>
        <errorMessage>quantity must be greater than or equal to 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeedERP__Unit_Cost_Is_Required</fullName>
        <active>true</active>
        <description>Unit cost field is required</description>
        <errorConditionFormula>ISBLANK(AcctSeedERP__Unit_Cost__c)</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Unit_Cost__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>